  * Added buttons to palettes for scrolling.
  * Turtles dispatch a click event so that they can be used as buttons.
  * Fixed problem with tour background (on first load and on small displays).
  * Resize Turtle hit area when updating turtle shell.
  * Added Music block plugin (Ignacio Rodriguez)
  * Added text from Show Block to exported SVG (Abhinav Anurag)
  * Do block is now labeled 'do' on palette
  * Update label of named boxes when box name changes.
  * Update label of named boxes on palette when name changes.
  * Added Named Do Blocks.
  * Fixed regression in restoring plugins from local storage.

TODO:
  * Make standalone do blocks (similar to standalone boxes)
  * Save errors
  * Display rubrics
  * More efficient until and while?
  * Save to javascript
  * Rtl support
  * Zoom and scroll?
  * Use graphical error messages
  * Make expand an array, one element for each arg or slot
  * User-defined block types (trivial with factory)
  * Three-arg arg blocks (trivial with factory)
  * Artwork beautification?
  * Try to detect difference between unknown flow and arg blocks
  * What palette/block features from the Python version do we need to port?
  * Do we need to add support for plugins init, quit, etc.?
  * Better interoperability with Python version
  * Sugar datastore/toolbar support

FEATURE IDEAS:
  * Local variables? (e.g., boxes only defined inside an action?) Note that
    we can use turtlename to create instance variables.
  * Pass argments to actions? (and arg blocks to reference them)?
  * Arrays

KNOWN BUGS:
  * Find a scalable approach to drawing on the canvas
  * Not all blocks highlight when using step-by-step mode
  * Camera doesn't work on Android
  * Cannot open plugins loader on Android
  * Sometimes returning to backgrounded project results in empty project
  * Bad/missing thumbnails break the Planet.
  * Two-arg blocks don't expand on load.
  * Loading macros there is a funny collapsed state sometimes.