@@ -263,6 +263,7 @@
   * Update label of named boxes on palette when name changes.
   * Added Named Do Blocks.
   * Fixed regression in restoring plugins from local storage.
+  * Properly position and scale text exported to SVG.
 
 TODO:
   * Make standalone do blocks (similar to standalone boxes)
